Adding the somke test and the commit export

--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -16,7 +16,7 @@ pipelines:
         username: carolinazegarra01
         shallow_clone: false
         auto_update: true
-        branch: task12-czn
+        branch: task14-czn
         encrypted_password: AES:YglD8hhgJFuJMXQUwtXSVw==:gCQ0ar8k+rZ8llR0tOdQHA==
     stages:
     - Test:
@@ -33,6 +33,8 @@ pipelines:
             - ubuntu
             tasks:
             - script: |
+                git rev-parse --short HEAD > gitCommit.txt
+                export GIT_COMMIT_HASH=$(cat gitCommit.txt)
                 npm install --save-dev ts-jest
                 npm install --save-dev @types/jest
                 npx jest
@@ -46,6 +48,8 @@ pipelines:
                 source: docker-compose-czn.yaml
             - build: 
                 source: .env
+            - build:
+                source: gitCommit.txt
     - code_inspection:
         fetch_materials: false
         keep_artifacts: false
@@ -66,7 +70,7 @@ pipelines:
                     -Dsonar.sources=. \
                     -Dsonar.host.url=https://sonarcloud.io
     - PackageAndPublish:
-        fetch_materials: true
+        fetch_materials: false
         keep_artifacts: false
         clean_workspace: false
         approval:
@@ -78,8 +82,14 @@ pipelines:
             resources :
             - docker
             tasks:
+            - fetch:
+                is_file: false
+                source: ./
+                stage: Test
+                job: unit-test
+                run_if: passed
             - script: |
-                ls -la
+                export GIT_COMMIT_HASH=$(cat gitCommit.txt)
                 docker build -t at20_convert_service .
                 docker login -u carolina01 --password-stdin <<< ${DOCKER_PASS}
                 docker tag at20_convert_service carolina01/at20_convert_service:${GIT_COMMIT_HASH}
@@ -96,6 +106,7 @@ pipelines:
     display_order: -1
     environment_variables:
       GIT_COMMIT_HASH: 1.2
+      TARGET_HOST: 192.168.0.18
     materials:
       Test:
         pipeline: Test
@@ -114,6 +125,13 @@ pipelines:
             resources :
             - docker
             tasks:
+            - fetch:
+                pipeline: Test
+                stage: Test
+                job: unit-test
+                source: gitCommit.txt
+                is_file: true
+                run_if: passed
             - fetch: 
                 pipeline: Test
                 stage: PackageAndPublish
@@ -121,9 +139,15 @@ pipelines:
                 source: docker-compose-czn.yaml
                 is_file: true
                 run_if: passed
+            - fetch: 
+                pipeline: Test
+                stage: PackageAndPublish
+                job: docker
+                source: .env
+                is_file: true
+                run_if: passed
             - script: |
-                echo deploy here
-                ls -la
+                export GIT_COMMIT_HASH=$(cat gitCommit.txt)
                 export TAG_VERSION=${GIT_COMMIT_HASH} && docker-compose -f docker-compose-czn.yaml up -d
     - Smoke:
         fetch_materials: false
@@ -138,5 +162,28 @@ pipelines:
             resources :
             - docker
             tasks:
+            - fetch:
+                pipeline: Test
+                stage: Test
+                job: unit-test
+                source: gitCommit.txt
+                is_file: true
+                run_if: passed
+            - fetch: 
+                pipeline: Test
+                stage: PackageAndPublish
+                job: docker
+                source: docker-compose-czn.yaml
+                is_file: true
+                run_if: passed
+            - fetch: 
+                pipeline: Test
+                stage: PackageAndPublish
+                job: docker
+                source: .env
+                is_file: true
+                run_if: passed
             - script: |
-                echo command to run smoke test
+                export GIT_COMMIT_HASH=$(cat gitCommit.txt)
+                export TAG_VERSION=${GIT_COMMIT_HASH}
+                DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose-czn.yaml up -d
