--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -99,7 +99,7 @@ pipelines:
                   source: docker-compose-czn.yaml
               - build: 
                   source: .env
-  SmokeTest:
+  Acceptance:
     group: AT20-czn
     label_template: ${COUNT}
     lock_behavior: none
@@ -120,7 +120,7 @@ pipelines:
           type: success
           allow_only_on_success: false
         jobs:
-          deployToDev:
+          smoke-test:
             timeout: 0
             resources :
             - docker
@@ -149,7 +149,20 @@ pipelines:
             - script: |
                 export GIT_COMMIT_HASH=$(cat gitCommit.txt)
                 export TAG_VERSION=${GIT_COMMIT_HASH} && docker-compose -f docker-compose-czn.yaml up -d
-    - Smoke:
+  Capacity:
+    group: AT20-czn
+    label_template: ${COUNT}
+    lock_behavior: none
+    display_order: -1
+    environment_variables:
+      GIT_COMMIT_HASH: 1.2
+      TARGET_HOST: 192.168.0.18
+    materials:
+      Test:
+        pipeline: Test
+        stage: PackageAndPublish
+    stages:
+    - DeployToAuto:
         fetch_materials: false
         keep_artifacts: false
         clean_workspace: false
@@ -157,7 +170,7 @@ pipelines:
           type: success
           allow_only_on_success: false
         jobs:
-          deployToDev:
+          capacity-test:
             timeout: 0
             resources :
             - docker
