Add fix number # 2

--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -9,7 +9,6 @@ pipeline{
         SONAR_TOKEN = credentials('sonar_token')
         TARGET_HOST = '192.168.0.173'
         GIT_COMMIT_HASH = sh (script: "git rev-parse --short HEAD", returnStdout: true)
-        //GIT_COMMIT_HASH = sh (script: "git log -n 1 --pretty=format:'%H'", returnStdout: true)
     }
     stages {
         stage("Test"){
@@ -60,7 +59,6 @@ pipeline{
         }
         stage('Publish'){
             steps{
-                //sh 'export TAG=$(git log --pretty=format:'%h' -n 1)'
                 sh 'docker login -u daniish77 -p ${DOCKER_PASS}'
                 sh 'docker tag at20_convert_service daniish77/at20_convert_service:${GIT_COMMIT_HASH}'
                 sh 'docker push daniish77/at20_convert_service:${GIT_COMMIT_HASH}'
@@ -74,7 +72,7 @@ pipeline{
             }
         }
         stage('DeployToAuto') {
-            when { expression { params.skip_stage != false } }
+            when { expression { params.skip_stage != true } }
             steps {
                 sh 'export TAG_VERSION=${GIT_COMMIT_HASH} && DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run automation tests'
@@ -86,14 +84,16 @@ pipeline{
             sh 'docker image prune -a -f'
         }
         success {
-        emailext body: 'El pipeline se ejecutó exitosamente',
-                 subject: 'Pipeline exitoso',
-                 to: 'daniish77@gmail.com'
+        emailext body: 'The Convert service build was executed successfully',
+                 subject: 'The results of the build for the "Converter service"',
+                 to: 'daniish77@gmail.com',
+                 attachLog: true
         }
         failure {
-        emailext body: 'El pipeline falló',
-                 subject: 'Pipeline fallido',
-                 to: 'daniish77@gmail.com'
+        emailext body: 'The Convert service build failed at stage: ${currentBuild.currentStage.name}\n\n',
+                 subject: 'The results of the build for the "Converter service"',
+                 to: 'daniish77@gmail.com',
+                 attachLog: true
         }
     }
 
