--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -76,8 +76,8 @@ pipeline{
         always{
             sh 'docker image prune -a -f'
             emailext (
-                    body: 'Pipeline for ${JOB_NAME} on build ${BUILD_NUMBER} has been executed ${BUILD_STATUS}, for details go to ${BUILD_URL}',
-                    subject: 'COnverter service build was executed ${BUILD_STATUS}',
+                    body: 'Pipeline for ${JOB_NAME} on build # ${BUILD_NUMBER} has been executed ${BUILD_STATUS}, for details go to ${BUILD_URL}',
+                    subject: 'Converter service build was executed ${BUILD_STATUS}',
                     to: 'daniish77@gmail.com',
                     attachLog: true
             )
