--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -200,3 +200,18 @@ pipelines:
                 run_if: passed
             - script: |
                 export TAG_VERSION=$(cat gitCommit.txt) && DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose-czn.yaml up -d
+    - CapacityTest:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          test:
+            timeout: 0
+            resources:
+            - docker
+            tasks:
+            - script: |
+                echo command capacity testing here
